@@ -128,6 +128,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Kent R. Spillner
   Konstantin Vorobyev
   Tom Sydney Kerckhove
+  Lynoure Braakman
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
